samples/_failures_safe/1761264492_baf2c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fbcb7da.c:147: error: expected ‘;’, ‘,’ or ‘)’ at end of input
